[tool.poetry]
name = "psk-proxy-server"
version = "0.1.0"
description = ""
authors = ["Fiodar Drazdou <dfgckpsk@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
aiopg = "1.3.1"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
mock = "^5.0.1"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
